excel of columns before drop of missing

--- a/Code/Data Loading and Cleaning/All Data/Create Combined All Data with NLP Features.ipynb
+++ b/Code/Data Loading and Cleaning/All Data/Create Combined All Data with NLP Features.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "[7316 rows x 21 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
        "[6683 rows x 143 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1321,7 @@
        "[6683 rows x 162 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,6 +1340,190 @@
    "metadata": {},
    "source": [
     "## Drop Items Missing Any Required Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ticker\n",
+      "fixed_quarter_date\n",
+      "earnings_call_date\n",
+      "Rating\n",
+      "rating_date\n",
+      "Rating Rank AAA is 10\n",
+      "Next Rating\n",
+      "Next Rating Date\n",
+      "Previous Rating\n",
+      "Previous Rating Date\n",
+      "next_rating_date_or_end_of_data\n",
+      "credit_rating_year\n",
+      "previous_fixed_quarter_date\n",
+      "days_since_call_on_fixed_quarter\n",
+      "days_since_rating\n",
+      "for_quarter\n",
+      "for_year\n",
+      "transcript\n",
+      "reportedCurrency\n",
+      "acceptedDate_balance_sheet\n",
+      "cashAndCashEquivalents\n",
+      "shortTermInvestments\n",
+      "cashAndShortTermInvestments\n",
+      "netReceivables\n",
+      "inventory_balance_sheet\n",
+      "otherCurrentAssets\n",
+      "totalCurrentAssets\n",
+      "propertyPlantEquipmentNet\n",
+      "goodwill\n",
+      "intangibleAssets\n",
+      "goodwillAndIntangibleAssets\n",
+      "longTermInvestments\n",
+      "taxAssets\n",
+      "otherNonCurrentAssets\n",
+      "totalNonCurrentAssets\n",
+      "otherAssets\n",
+      "totalAssets\n",
+      "accountPayables\n",
+      "shortTermDebt\n",
+      "taxPayables\n",
+      "deferredRevenue\n",
+      "otherCurrentLiabilities\n",
+      "totalCurrentLiabilities\n",
+      "longTermDebt\n",
+      "deferredRevenueNonCurrent\n",
+      "deferredTaxLiabilitiesNonCurrent\n",
+      "otherNonCurrentLiabilities\n",
+      "totalNonCurrentLiabilities\n",
+      "otherLiabilities\n",
+      "capitalLeaseObligations\n",
+      "totalLiabilities\n",
+      "preferredStock\n",
+      "commonStock\n",
+      "retainedEarnings\n",
+      "accumulatedOtherComprehensiveIncomeLoss\n",
+      "othertotalStockholdersEquity\n",
+      "totalStockholdersEquity\n",
+      "totalEquity\n",
+      "totalLiabilitiesAndStockholdersEquity\n",
+      "minorityInterest\n",
+      "totalLiabilitiesAndTotalEquity\n",
+      "totalInvestments\n",
+      "totalDebt\n",
+      "netDebt\n",
+      "acceptedDate_cash_flow_statement\n",
+      "netIncome_cash_flow_statement\n",
+      "depreciationAndAmortization_cash_flow_statement\n",
+      "deferredIncomeTax\n",
+      "stockBasedCompensation\n",
+      "changeInWorkingCapital\n",
+      "accountsReceivables\n",
+      "inventory_cash_flow_statement\n",
+      "accountsPayables\n",
+      "otherWorkingCapital\n",
+      "otherNonCashItems\n",
+      "netCashProvidedByOperatingActivities\n",
+      "investmentsInPropertyPlantAndEquipment\n",
+      "acquisitionsNet\n",
+      "purchasesOfInvestments\n",
+      "salesMaturitiesOfInvestments\n",
+      "otherInvestingActivites\n",
+      "netCashUsedForInvestingActivites\n",
+      "debtRepayment\n",
+      "commonStockIssued\n",
+      "commonStockRepurchased\n",
+      "dividendsPaid\n",
+      "otherFinancingActivites\n",
+      "netCashUsedProvidedByFinancingActivities\n",
+      "effectOfForexChangesOnCash\n",
+      "netChangeInCash\n",
+      "cashAtEndOfPeriod\n",
+      "cashAtBeginningOfPeriod\n",
+      "operatingCashFlow\n",
+      "capitalExpenditure\n",
+      "freeCashFlow\n",
+      "acceptedDate_income_statement\n",
+      "revenue\n",
+      "costOfRevenue\n",
+      "grossProfit\n",
+      "grossProfitRatio\n",
+      "researchAndDevelopmentExpenses\n",
+      "generalAndAdministrativeExpenses\n",
+      "sellingAndMarketingExpenses\n",
+      "sellingGeneralAndAdministrativeExpenses\n",
+      "otherExpenses\n",
+      "operatingExpenses\n",
+      "costAndExpenses\n",
+      "interestIncome\n",
+      "interestExpense\n",
+      "depreciationAndAmortization_income_statement\n",
+      "ebitda\n",
+      "ebitdaratio\n",
+      "operatingIncome\n",
+      "operatingIncomeRatio\n",
+      "totalOtherIncomeExpensesNet\n",
+      "incomeBeforeTax\n",
+      "incomeBeforeTaxRatio\n",
+      "incomeTaxExpense\n",
+      "netIncome_income_statement\n",
+      "netIncomeRatio\n",
+      "eps\n",
+      "epsdiluted\n",
+      "weightedAverageShsOut\n",
+      "weightedAverageShsOutDil\n",
+      "financial_statement_date\n",
+      "marketCap\n",
+      "EBIT\n",
+      "common_plus_preferred_stock\n",
+      "workingCapital\n",
+      "Ratio_A\n",
+      "Ratio_B\n",
+      "Ratio_C\n",
+      "Ratio_D\n",
+      "Ratio_E\n",
+      "Altman_Z\n",
+      "filingDate\n",
+      "rating_on_previous_fixed_quarter_date\n",
+      "Investment_Grade\n",
+      "rating_on_previous_fixed_quarter_date AAA is 10\n",
+      "Change Direction Since Last Fixed Quarter Date\n",
+      "Change Since Last Fixed Quarter Date\n",
+      "Sector\n",
+      "train_test_80_20\n",
+      "num_transparency\n",
+      "gf_score\n",
+      "readability\n",
+      "word_count\n",
+      "num_questions\n",
+      "pos_score\n",
+      "Positiv\n",
+      "Negativ\n",
+      "Strong\n",
+      "Weak\n",
+      "Active\n",
+      "Passive\n",
+      "Ovrst\n",
+      "Undrst\n",
+      "PN\n",
+      "SW\n",
+      "AP\n",
+      "OU\n",
+      "TONE1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print all columns\n",
+    "for col in all_data_with_NLP_features.columns:\n",
+    "    print(col)\n",
+    "# Output to Excel\n",
+    "all_cols = pd.DataFrame(all_data_with_NLP_features.columns)\n",
+    "all_cols.columns = ['column_name']\n",
+    "all_cols.to_excel('all_data_with_NLP_features_columns_before_drop_of_missing.xlsx', index = False)"
    ]
   },
   {
