update core EDA

--- a/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
+++ b/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
@@ -2,3 +2,5 @@
 \newcommand{\numCompanies}{536}
 \newcommand{\numQuarters}{7333}
 \newcommand{\numCompanies}{536}
+\newcommand{\numQuarters}{4724}
+\newcommand{\numCompanies}{387}
