ner firm mentions update

--- a/Code/NLP Feature Construction/NER Firm Mentions/Get Tickers From Firm Names.ipynb
+++ b/Code/NLP Feature Construction/NER Firm Mentions/Get Tickers From Firm Names.ipynb
@@ -1810,7 +1810,17 @@
     "if sample_run:\n",
     "    mentions = pd.read_parquet('../../../Data/Company_Mentions/Company_Mentions_Sample.parquet')\n",
     "else:\n",
-    "    mentions = pd.read_parquet('../../../Data/Company_Mentions/Company_Mentions.parquet')"
+    "    mentions = pd.read_parquet('../../../Data/Company_Mentions/Company_Mentions.parquet')\n",
+    "\n",
+    "# Limit to final dataset used\n",
+    "# list of files in '../../../Data/All_Data/All_Data_with_NLP_Features'\n",
+    "import os\n",
+    "file_list = [f for f in os.listdir(r'../../../Data/All_Data/All_Data_with_NLP_Features') if f.endswith('.parquet')]\n",
+    "# read in all parquet files\n",
+    "data_used = pd.concat([pd.read_parquet(r'../../../Data/All_Data/All_Data_with_NLP_Features/' + f, columns = ['ticker', 'earnings_call_date']) for f in file_list])\n",
+    "# Merge with mentions\n",
+    "mentions = mentions.merge(data_used, how='inner', on=['ticker', 'earnings_call_date'])\n",
+    "mentions"
    ]
   },
   {
