--- a/Code/Exploratory Data Analysis/All Data/All Data - Tabular EDA.ipynb
+++ b/Code/Exploratory Data Analysis/All Data/All Data - Tabular EDA.ipynb
@@ -3263,7 +3263,7 @@
     "\n",
     "# Save number of quarters and companies\n",
     "stattotex(len(df), 'numQuarters', output_folder + 'num_quarters_and_companies.tex')\n",
-    "stattotex(df['ticker'].nunique(), 'numCompanies', output_folder + 'num_quarters_and_companies.tex')"
+    "stattotex(df['ticker'].nunique(), 'numCompanies', output_folder + 'num_quarters_and_companies.tex', clear_preexisting=False)"
    ]
   },
   {
