--- a/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
+++ b/Output/All Data EDA/Tabular EDA/num_quarters_and_companies.tex
@@ -1,6 +1,7 @@
-\newcommand{\numQuarters}{26}
-\newcommand{\numCompanies}{536}
-\newcommand{\numQuarters}{7333}
-\newcommand{\numCompanies}{536}
+
 \newcommand{\numQuarters}{4724}
 \newcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
+\renewcommand{\numQuarters}{4724}
+\renewcommand{\numCompanies}{387}
