remove extra variables

--- a/Code/Data Loading and Cleaning/All Data/Create Combined All Data with NLP Features.ipynb
+++ b/Code/Data Loading and Cleaning/All Data/Create Combined All Data with NLP Features.ipynb
@@ -1339,6 +1339,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Remove extraneous variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove extraneous variables 'Rating Rank AAA is 10', 'rating_on_previous_fixed_quarter_date AAA is 10'\n",
+    "all_data_with_NLP_features = all_data_with_NLP_features.drop(['Rating Rank AAA is 10', 'rating_on_previous_fixed_quarter_date AAA is 10'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Drop Items Missing Any Required Variables"
    ]
   },
@@ -1356,7 +1373,6 @@
       "earnings_call_date\n",
       "Rating\n",
       "rating_date\n",
-      "Rating Rank AAA is 10\n",
       "Next Rating\n",
       "Next Rating Date\n",
       "Previous Rating\n",
@@ -1489,7 +1505,6 @@
       "filingDate\n",
       "rating_on_previous_fixed_quarter_date\n",
       "Investment_Grade\n",
-      "rating_on_previous_fixed_quarter_date AAA is 10\n",
       "Change Direction Since Last Fixed Quarter Date\n",
       "Change Since Last Fixed Quarter Date\n",
       "Sector\n",
@@ -1528,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1570,11 +1585,11 @@
        "      <th>earnings_call_date</th>\n",
        "      <th>Rating</th>\n",
        "      <th>rating_date</th>\n",
-       "      <th>Rating Rank AAA is 10</th>\n",
        "      <th>Next Rating</th>\n",
        "      <th>Next Rating Date</th>\n",
        "      <th>Previous Rating</th>\n",
        "      <th>Previous Rating Date</th>\n",
+       "      <th>next_rating_date_or_end_of_data</th>\n",
        "      <th>...</th>\n",
        "      <th>Weak</th>\n",
        "      <th>Active</th>\n",
@@ -1596,11 +1611,11 @@
        "      <td>2014-07-22</td>\n",
        "      <td>AA</td>\n",
        "      <td>2014-05-27</td>\n",
-       "      <td>9</td>\n",
        "      <td>AA</td>\n",
        "      <td>2015-02-18</td>\n",
        "      <td>AAA</td>\n",
        "      <td>2014-04-24</td>\n",
+       "      <td>2015-02-18</td>\n",
        "      <td>...</td>\n",
        "      <td>42.0</td>\n",
        "      <td>495.0</td>\n",
@@ -1620,11 +1635,11 @@
        "      <td>2014-10-20</td>\n",
        "      <td>AA</td>\n",
        "      <td>2014-05-27</td>\n",
-       "      <td>9</td>\n",
        "      <td>AA</td>\n",
        "      <td>2015-02-18</td>\n",
        "      <td>AAA</td>\n",
        "      <td>2014-04-24</td>\n",
+       "      <td>2015-02-18</td>\n",
        "      <td>...</td>\n",
        "      <td>46.0</td>\n",
        "      <td>656.0</td>\n",
@@ -1644,11 +1659,11 @@
        "      <td>2015-01-27</td>\n",
        "      <td>AA</td>\n",
        "      <td>2015-02-18</td>\n",
-       "      <td>9</td>\n",
        "      <td>AA</td>\n",
        "      <td>2015-05-28</td>\n",
        "      <td>AA</td>\n",
        "      <td>2014-05-27</td>\n",
+       "      <td>2015-05-28</td>\n",
        "      <td>...</td>\n",
        "      <td>88.0</td>\n",
        "      <td>591.0</td>\n",
@@ -1668,11 +1683,11 @@
        "      <td>2015-04-27</td>\n",
        "      <td>AA</td>\n",
        "      <td>2015-06-02</td>\n",
-       "      <td>9</td>\n",
        "      <td>AA</td>\n",
        "      <td>2015-08-25</td>\n",
        "      <td>AA</td>\n",
        "      <td>2015-05-28</td>\n",
+       "      <td>2015-08-25</td>\n",
        "      <td>...</td>\n",
        "      <td>70.0</td>\n",
        "      <td>565.0</td>\n",
@@ -1692,11 +1707,11 @@
        "      <td>2015-07-21</td>\n",
        "      <td>AA</td>\n",
        "      <td>2015-08-25</td>\n",
-       "      <td>9</td>\n",
        "      <td>AA</td>\n",
        "      <td>2016-05-20</td>\n",
        "      <td>AA</td>\n",
        "      <td>2015-06-02</td>\n",
+       "      <td>2016-05-20</td>\n",
        "      <td>...</td>\n",
        "      <td>70.0</td>\n",
        "      <td>565.0</td>\n",
@@ -1740,11 +1755,11 @@
        "      <td>2015-08-04</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2015-01-30</td>\n",
-       "      <td>7</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2015-11-03</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2014-01-31</td>\n",
+       "      <td>2015-11-03</td>\n",
        "      <td>...</td>\n",
        "      <td>52.0</td>\n",
        "      <td>623.0</td>\n",
@@ -1764,11 +1779,11 @@
        "      <td>2015-11-03</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2015-11-03</td>\n",
-       "      <td>7</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2016-01-22</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2015-01-30</td>\n",
+       "      <td>2016-01-22</td>\n",
        "      <td>...</td>\n",
        "      <td>79.0</td>\n",
        "      <td>737.0</td>\n",
@@ -1788,11 +1803,11 @@
        "      <td>2016-02-16</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2016-01-22</td>\n",
-       "      <td>7</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2016-12-23</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2015-11-03</td>\n",
+       "      <td>2016-12-23</td>\n",
        "      <td>...</td>\n",
        "      <td>73.0</td>\n",
        "      <td>840.0</td>\n",
@@ -1812,11 +1827,11 @@
        "      <td>2016-05-04</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2016-01-22</td>\n",
-       "      <td>7</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2016-12-23</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2015-11-03</td>\n",
+       "      <td>2016-12-23</td>\n",
        "      <td>...</td>\n",
        "      <td>68.0</td>\n",
        "      <td>765.0</td>\n",
@@ -1836,11 +1851,11 @@
        "      <td>2016-08-03</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2016-01-22</td>\n",
-       "      <td>7</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2016-12-23</td>\n",
        "      <td>BBB</td>\n",
        "      <td>2015-11-03</td>\n",
+       "      <td>2016-12-23</td>\n",
        "      <td>...</td>\n",
        "      <td>86.0</td>\n",
        "      <td>852.0</td>\n",
@@ -1855,7 +1870,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4724 rows × 162 columns</p>\n",
+       "<p>4724 rows × 160 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1872,49 +1887,49 @@
        "6681    ZTS         2016-07-01         2016-05-04    BBB  2016-01-22   \n",
        "6682    ZTS         2016-10-01         2016-08-03    BBB  2016-01-22   \n",
        "\n",
-       "      Rating Rank AAA is 10 Next Rating Next Rating Date Previous Rating  \\\n",
-       "1                         9          AA       2015-02-18             AAA   \n",
-       "2                         9          AA       2015-02-18             AAA   \n",
-       "3                         9          AA       2015-05-28              AA   \n",
-       "4                         9          AA       2015-08-25              AA   \n",
-       "5                         9          AA       2016-05-20              AA   \n",
-       "...                     ...         ...              ...             ...   \n",
-       "6678                      7         BBB       2015-11-03             BBB   \n",
-       "6679                      7         BBB       2016-01-22             BBB   \n",
-       "6680                      7         BBB       2016-12-23             BBB   \n",
-       "6681                      7         BBB       2016-12-23             BBB   \n",
-       "6682                      7         BBB       2016-12-23             BBB   \n",
+       "     Next Rating Next Rating Date Previous Rating Previous Rating Date  \\\n",
+       "1             AA       2015-02-18             AAA           2014-04-24   \n",
+       "2             AA       2015-02-18             AAA           2014-04-24   \n",
+       "3             AA       2015-05-28              AA           2014-05-27   \n",
+       "4             AA       2015-08-25              AA           2015-05-28   \n",
+       "5             AA       2016-05-20              AA           2015-06-02   \n",
+       "...          ...              ...             ...                  ...   \n",
+       "6678         BBB       2015-11-03             BBB           2014-01-31   \n",
+       "6679         BBB       2016-01-22             BBB           2015-01-30   \n",
+       "6680         BBB       2016-12-23             BBB           2015-11-03   \n",
+       "6681         BBB       2016-12-23             BBB           2015-11-03   \n",
+       "6682         BBB       2016-12-23             BBB           2015-11-03   \n",
        "\n",
-       "     Previous Rating Date  ...  Weak  Active Passive  Ovrst  Undrst        PN  \\\n",
-       "1              2014-04-24  ...  42.0   495.0   186.0  364.0   131.0  5.518519   \n",
-       "2              2014-04-24  ...  46.0   656.0   199.0  465.0   152.0  5.348485   \n",
-       "3              2014-05-27  ...  88.0   591.0   208.0  468.0   151.0  3.927711   \n",
-       "4              2015-05-28  ...  70.0   565.0   214.0  415.0   135.0  5.250000   \n",
-       "5              2015-06-02  ...  70.0   565.0   219.0  449.0   148.0  4.209877   \n",
-       "...                   ...  ...   ...     ...     ...    ...     ...       ...   \n",
-       "6678           2014-01-31  ...  52.0   623.0   214.0  298.0   148.0  3.611650   \n",
-       "6679           2015-01-30  ...  79.0   737.0   264.0  395.0   222.0  3.766917   \n",
-       "6680           2015-11-03  ...  73.0   840.0   287.0  469.0   217.0  3.565517   \n",
-       "6681           2015-11-03  ...  68.0   765.0   253.0  449.0   215.0  3.572650   \n",
-       "6682           2015-11-03  ...  86.0   852.0   300.0  460.0   201.0  2.858896   \n",
+       "     next_rating_date_or_end_of_data  ...  Weak Active  Passive  Ovrst  \\\n",
+       "1                         2015-02-18  ...  42.0  495.0    186.0  364.0   \n",
+       "2                         2015-02-18  ...  46.0  656.0    199.0  465.0   \n",
+       "3                         2015-05-28  ...  88.0  591.0    208.0  468.0   \n",
+       "4                         2015-08-25  ...  70.0  565.0    214.0  415.0   \n",
+       "5                         2016-05-20  ...  70.0  565.0    219.0  449.0   \n",
+       "...                              ...  ...   ...    ...      ...    ...   \n",
+       "6678                      2015-11-03  ...  52.0  623.0    214.0  298.0   \n",
+       "6679                      2016-01-22  ...  79.0  737.0    264.0  395.0   \n",
+       "6680                      2016-12-23  ...  73.0  840.0    287.0  469.0   \n",
+       "6681                      2016-12-23  ...  68.0  765.0    253.0  449.0   \n",
+       "6682                      2016-12-23  ...  86.0  852.0    300.0  460.0   \n",
        "\n",
-       "             SW        AP        OU     TONE1  \n",
-       "1     15.261905  2.661290  2.778626  3.188264  \n",
-       "2     15.934783  3.296482  3.059211  3.681858  \n",
-       "3      8.113636  2.841346  3.099338  1.307366  \n",
-       "4      9.142857  2.640187  3.074074  2.025933  \n",
-       "5     10.442857  2.579909  3.033784  1.815531  \n",
-       "...         ...       ...       ...       ...  \n",
-       "6678  15.634615  2.911215  2.013514  1.744657  \n",
-       "6679  15.848101  2.791667  1.779279  1.596294  \n",
-       "6680  17.506849  2.926829  2.161290  2.287146  \n",
-       "6681  15.235294  3.023715  2.088372  1.739992  \n",
-       "6682  12.395349  2.840000  2.288557  0.976340  \n",
+       "      Undrst        PN         SW        AP        OU     TONE1  \n",
+       "1      131.0  5.518519  15.261905  2.661290  2.778626  3.188264  \n",
+       "2      152.0  5.348485  15.934783  3.296482  3.059211  3.681858  \n",
+       "3      151.0  3.927711   8.113636  2.841346  3.099338  1.307366  \n",
+       "4      135.0  5.250000   9.142857  2.640187  3.074074  2.025933  \n",
+       "5      148.0  4.209877  10.442857  2.579909  3.033784  1.815531  \n",
+       "...      ...       ...        ...       ...       ...       ...  \n",
+       "6678   148.0  3.611650  15.634615  2.911215  2.013514  1.744657  \n",
+       "6679   222.0  3.766917  15.848101  2.791667  1.779279  1.596294  \n",
+       "6680   217.0  3.565517  17.506849  2.926829  2.161290  2.287146  \n",
+       "6681   215.0  3.572650  15.235294  3.023715  2.088372  1.739992  \n",
+       "6682   201.0  2.858896  12.395349  2.840000  2.288557  0.976340  \n",
        "\n",
-       "[4724 rows x 162 columns]"
+       "[4724 rows x 160 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1934,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1961,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2002,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
