--- a/Code/Modelling/Logistic Regression/simple_regression.ipynb
+++ b/Code/Modelling/Logistic Regression/simple_regression.ipynb
@@ -29,7 +29,10 @@
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.metrics import ConfusionMatrixDisplay, classification_report, confusion_matrix\n",
         "from sklearn.model_selection import GridSearchCV\n",
-        "import joblib"
+        "import joblib\n",
+        "# Kill warnings\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")"
       ]
     },
     {
